# Sensor-Stream-Pipe

./: .gitignore  CMakeLists.txt  CMakeListsMacOS.txt  CMakeListsWindows.txt  FrameClient.cpp  FrameEncoder.cpp  FrameEncoder.h  FrameProcessingClient.cpp  FrameReader.cpp  FrameReader.h  FrameServer.cpp  FrameStruct.cpp  FrameStruct.hpp  INSTALL.md  LICENSE  Makefile  Notes.txt  README.md  Utils.cpp  Utils.h  Utils.hpp  VideoClient.cpp  VideoEncoderServer.cpp  VideoFileReader.cpp  VideoFileReader.h  VideoFileServer.cpp  VideoFrameServer.cpp  VideoMain.cpp  VideoServer.cpp  build_linux_xlink.sh  build_win_xlink.sh  build_win_xlink_xxx.sh  doxyfile  doxygen.sh  mkinclude.sh  path-helpers-ubuntu20.sh  rebuild_linux_xlink_debug_nodeps.sh  rebuild_linux_xlink_release_nodeps.sh  rebuild_win_release_nodeps.sh  rebuild_win_xlink_release_nodeps.sh  (+8 more)
CMakeModules/: FindFFmpeg.cmake
builder/: CMakeCache.txt
clients/: FrameProcessingClient.cpp  SSPClient.cpp  ssp_broker.cc  ssp_client.cc  ssp_client_body_logger.cc  ssp_client_k4a.cc  ssp_client_opencv.cc  ssp_client_pointcloud.cc  ssp_client_raas.cc  ssp_client_raas_playground.cc  ssp_client_template.cc  ssp_coordinator.cc  ssp_coordinator.cpp  ssp_coordinator.h  ssp_coordinator_main.cc  ssp_coordinator_types.h
cmake/: FindFFmpeg.cmake  FindNvPipe.cmake  Findk4abt.cmake  Findopenh264.cmake  package_for_unity.sh  raas_package_for_unity.sh
configs/: NEW_color_h264.yaml  color_h264.yaml  color_h265_cuda.yaml  cudax264_2160P.yaml  cudax264_720P.yaml  cudax265_2160P.yaml  cudax265_720P.yaml  depth_h264.yaml  depth_h265.yaml  kinect_tester.yaml  kinect_tester_nvenc.yaml  raw_2160P.yaml  raw_720P.yaml  raw_alt_2160P.yaml  raw_alt_720P.yaml  serve_dummy_bodies.yaml  serve_frames_color.yaml  serve_frames_color_depth.yaml  serve_frames_depth.yaml  serve_ios_raw.yaml.in  serve_kinect_nvenc.yaml  serve_kinect_raw.yaml  serve_oakd_device.yaml  serve_oakd_device_lab_1.yaml  serve_oakd_device_lab_2.yaml  serve_oakd_device_lab_3.yaml  serve_oakd_device_lab_4.yaml  serve_oakd_device_lab_5.yaml  serve_oakd_device_lab_6.yaml  serve_oakd_device_lab_7ex.yaml  serve_oakd_device_lab_8ex.yaml  serve_oakd_device_lab_9ex.yaml  serve_oakd_device_lab_generic.yaml  serve_shop_1.yaml  serve_shop_2.yaml  serve_shop_3.yaml  serve_shop_4.yaml  serve_shop_5.yaml  serve_shop_6.yaml  serve_shop_7.yaml  (+21 more)
decoders/: FrameDecoder.cpp  FrameDecoder.h  IDecoder.h  LibAvDecoder.cpp  LibAvDecoder.h  NvDecoder.cpp  NvDecoder.h  ZDepthDecoder.cpp  ZDepthDecoder.h  idecoder.cc  idecoder.h  libav_decoder.cc  libav_decoder.h  nv_decoder.cc  nv_decoder.h  zdepth_decoder.cc  zdepth_decoder.h
docs/html/: annotated.html  classBodyTracker-members.html  classBodyTracker.html  classes.html  classmoetsi_1_1ssp_1_1DummyBodyReader-members.html  classmoetsi_1_1ssp_1_1DummyBodyReader.html  classmoetsi_1_1ssp_1_1DummyBodyReader__coll__graph.dot  classmoetsi_1_1ssp_1_1DummyBodyReader__coll__graph.map  classmoetsi_1_1ssp_1_1DummyBodyReader__coll__graph.md5  classmoetsi_1_1ssp_1_1IDecoder-members.html  (+852 more)
encoders/: FrameEncoder.cpp  FrameEncoder.h  IEncoder.h  LibAvEncoder.cpp  LibAvEncoder.h  NullEncoder.cpp  NullEncoder.h  NvEncoder.cpp  NvEncoder.h  ZDepthEncoder.cpp  ZDepthEncoder.h  iencoder.cc  iencoder.h  libav_encoder.cc  libav_encoder.h  null_encoder.cc  null_encoder.h  nv_encoder.cc  nv_encoder.h  zdepth_encoder.cc  zdepth_encoder.h
examples/: stairs-seq-01-frames-color.txt  stairs-seq-01-frames-depth.txt
huho/: oakd_xlink_reader.cc  oakd_xlink_reader.h
include/: ssp.h
models/: diff_images_simplified_openvino_2021.4_4shave.blob  face_detection_yunet_360x640_sh4.blob  human-pose-estimation-3d-0001.xml  human-pose-estimation-3d-455.xml  human-pose-estimation-3d-456.xml  human-pose-estimation-3d.xml  person-detection-retail-0013-4-shave.blob  person-detection-retail-0013-6-shave.blob  person-reidentification-retail-0288-4-shave.blob  person-reidentification-retail-0288-6-shave.blob  postproc_yunet_top50_th60_120x160_sh4.blob  postproc_yunet_top50_th60_360x640_sh4.blob
processors/: issp_processor.h  ssp_processor_k4a.cc  ssp_processor_k4a.h  ssp_processor_main.cc  ssp_processor_opencv.cc  ssp_processor_opencv.h  ssp_processor_pointcloud.cc  ssp_processor_pointcloud.h  ssp_processor_template.cc  ssp_processor_template.h
readers/: FrameReader.cpp  FrameReader.h  IReader.h  ImageReader.cpp  ImageReader.h  KinectReader.cpp  KinectReader.h  NetworkReader.cpp  NetworkReader.h  VideoFileReader.cpp  VideoFileReader.h  args_helper.cpp  args_helper.hpp  compare.py  compare.txt  dummy_body_reader.cc  dummy_body_reader.h  human_poses.cpp  human_poses.h  image_reader.cc  image_reader.h  iphone_reader.h  iphone_reader.mm  ireader.cc  ireader.h  kinect_reader.cc  kinect_reader.h  multi_image_reader.cc  multi_image_reader.h  network_reader.cc  network_reader.h  oakd_device_reader.cc  oakd_device_reader.h  oakd_xlink_full_reader.cc  oakd_xlink_full_reader.h  oakd_xlink_reader.bof.cc  oakd_xlink_reader.bof.h  oakd_xlink_reader.cc  oakd_xlink_reader.h  ocv_common.hpp  (+5 more)
scripts/: generate_bundle_fusion_filelist.py
servers/: FrameServer.cpp  GenericServer.cpp  Info.plist.in  KinectEncoderServer.cpp  KinectServer.cpp  SSPServer.cpp  VideoEncoderServer.cpp  VideoFileServer.cpp  ssp_server.cc  ssp_server.h  ssp_server_main.cc
structs/: FrameStruct.hpp  body_struct.h  body_struct.hpp  detection_struct.h  frame_struct.h  frame_struct.hpp
testers/: KinectEncodingTester.cpp  SSPTester.cpp  Tester.cpp  VideoEncodingTester.cpp  ssp_pointcloud_extractor.cc  ssp_tester.cc
utils/: ImageDecoder.cpp  ImageDecoder.h  KinectEncodingTester.cpp  KinectUtils.cpp  KinectUtils.h  Logger.h  SimilarityMeasures.cpp  SimilarityMeasures.h  Utils.cpp  Utils.h  VideoEncodingTester.cpp  VideoUtils.cpp  VideoUtils.h  VideoUtils.hpp  image_converter.cc  image_converter.h  image_decoder.cc  image_decoder.h  kinect_utils.cc  kinect_utils.h  libav_types.h  logger.h  nvpipe_types.h  similarity_measures.cc  similarity_measures.h  utils.cc  utils.h  video_utils.cc  video_utils.h
video/: FrameEncoder.cpp  FrameEncoder.h
(+540 files in other folders)
